Added Apache Commons Codec. Added Bouncy Castle. Compelted Boink (main initializer class) w/out exeption handling. Updated RemoteConenctions to use x509 Certs. Device ID is expected to be embedded as SubjectAltName. Added InfoProvider as one-time Producer chain for sensitive information handling. Updated BoinkPacket to statically obtain sensitive information through InfoProvider and protected get methods to those variables. Any access must now extend the class.

--- a/Boink/src/main/AndroidManifest.xml
+++ b/Boink/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         android:name=".client.connection.TestApp">
         <activity
-            android:name=".client.view.Boink"
+            android:name=".client.view.Home"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme">
